unworking fix for scrollbars

--- a/packages/composer-website/jekylldocs/assets/css/grid-layout.scss
+++ b/packages/composer-website/jekylldocs/assets/css/grid-layout.scss
@@ -21,17 +21,13 @@ $callout: #FFD640;
   display: grid;
   grid-template-columns: 20% 20% 20% 20% 20%;
   grid-template-rows: 20% 20% 20% 20% 20%;
-
-  // responsive button
-  // .toggle {
-  //     display: block ;
-  //   }
+  overflow: auto;
 
   // Scrollbar overrides
-  ::-webkit-scrollbar {
-    display: none;
-  }
-  -ms-overflow-style: none;  // IE 10+
+  // ::-webkit-scrollbar {
+  //   display: none;
+  // }
+  // -ms-overflow-style: none;  // IE 10+
 
   hr {
     display: none;
@@ -41,8 +37,8 @@ $callout: #FFD640;
     grid-column-start: 1;
     grid-column-end: 2;
     justify-items: start;
-    overflow-y: scroll;
-    height: 100vh;
+    // overflow-y: scroll;
+      height: 100vh;
 
     .docs-pagenav-grid {
       padding-top: 5vh;
@@ -232,7 +228,7 @@ $callout: #FFD640;
     grid-column-start: 2;
     grid-column-end: 6;
     background-color: $third-highlight;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 100vh;
 
     .content-chunk {
@@ -457,7 +453,7 @@ $callout: #FFD640;
       .page-sidebar-grid {
         grid-column-start: 1;
         grid-column-end: 6;
-        overflow-y: auto;
+        // overflow-y: auto;
 
         // #off-canvas {
         //     position: fixed; /* or choose `absolute` depending on desired behavior*/
